--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,9 @@
     <string name="settings">Settings</string>
     <string name="tender_status">Tender Status</string>
     <string name="add_tender">Add Tender</string>
-    <string name="settings">Settings</string>
+
+    <string name="file_name">File Name</string>
+    <string name="add_image">Add Image</string>
+    <string name="add_location">Add Location</string>
 
 </resources>
